Renomear projetos e projeto Day 3

--- a/project-trying-number-day3/index.html
+++ b/project-trying-number-day3/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 2 - Imersão Dev - Alura</title>
+    <title>Day 3 - Imersão Dev - Alura</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1 class="page-title">
-            Calculadora
+            Mentalista
         </h1>
-        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-calculadora.svg" class="page-logo"
+        <p class="page-subtitle">
+            Digite um número de 0 a 10
+        </p>
+        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page-logo"
             alt="">
-        <div class="calculadora">
-        </div>
+        <p class="result"></p>
     </div>
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
-    <h2 class="result"></h2>
-    <script src="calculator.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
