--- a/project-convertion-day1/index.html
+++ b/project-convertion-day1/index.html
@@ -27,7 +27,7 @@
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
-    <script src="convertion-euro-to-real.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
