--- a/project-favorite-games-day5/index.html
+++ b/project-favorite-games-day5/index.html
@@ -21,7 +21,7 @@
         </p>
         <div class="form-wrapper">
             <input type="text" id="game" name="game" placeholder="Insira o nome do jogo">
-            <input type="text" id="link-game" name="link-game" placeholder="Insira o endereço de vídeo">
+            <input type="text" id="link-game" name="link-game" placeholder="Insira o link do jogo">
             <button onClick="addGame()">Adicionar Jogo</button>
         </div>
     </div>
