Exibir resultado sorteio

--- a/project-day7/index.html
+++ b/project-day7/index.html
@@ -18,6 +18,8 @@
         <form id="form">
             <h2>Escolha o seu atributo</h2>
             <div class="options" id="options"></div>
+            <div class="playersNames"></div>
+            <div class="result"></div>
             <button type="button" id="buttonPlay" onclick="play()" disabled="false">Jogar</button>
         </form>
     </div>
