--- a/project-classification-teams-day6/index.html
+++ b/project-classification-teams-day6/index.html
@@ -10,22 +10,24 @@
 </head>
 
 <body>
-    <h1>Tabela de classificação</h1>
+    <div class="container">
+        <h1>Tabela de classificação</h1>
+        <table>
+            <thead>
+                <tr>
+                    <!-- Colunas -->
+                    <th>Time</th>
+                    <th>Vitórias</th>
+                    <th>Empates</th>
+                    <th>Derrotas</th>
+                    <th>Pontos</th>
+                    <th colspan="3">Ações</th>
+                </tr>
+            </thead>
+            <tbody id="tableTeams"></tbody>
+        </table>
+    </div>
 
-    <table>
-        <thead>
-            <tr>
-            <!-- Colunas -->
-                <th>Time</th>
-                <th>Vitórias</th>
-                <th>Empates</th>
-                <th>Derrotas</th>
-                <th>Pontos</th>
-                <th colspan="3">Ações</th>
-            </tr>
-        </thead>
-        <tbody id="tableTeams"></tbody>        
-    </table>
     <script src="script.js"></script>
 </body>
 
