Project Day10 - Certificate

--- a/project-certificate-day10/index.html
+++ b/project-certificate-day10/index.html
@@ -10,39 +10,43 @@
 </head>
 
 <body>
-    <section>
-        <header>
-            <img class="image-header" src="https://media-exp1.licdn.com/dms/image/C4D03AQFvSDG5L4z6BA/profile-displayphoto-shrink_800_800/0/1610104702023?e=1622678400&v=beta&t=jP6j9SPGyZILlMv0PB_tdzPo5AvPnHu9gyr5j0F_lsg" alt="Débora Gonçalves">
-        </header>
-    </section>
     <div class="container">
+        <div class="header">
+            <section>
+                <header>
+                    <img class="image-header"
+                        src="https://media-exp1.licdn.com/dms/image/C4D03AQFvSDG5L4z6BA/profile-displayphoto-shrink_800_800/0/1610104702023?e=1622678400&v=beta&t=jP6j9SPGyZILlMv0PB_tdzPo5AvPnHu9gyr5j0F_lsg"
+                        alt="Débora Gonçalves">
+                </header>
+            </section>
+        </div>
         <h1>Débora Gonçalves</h1>
         <ol class="projects">
-            <li>
+            <li href="https://github.com/deboragoncalves/imersao-dev-alura/tree/main/project-convertion-day1">
                 <span class="project-image">💰</span>
                 <span class="project-title">Projeto 1 - Conversor de Moedas</span>
             </li>
-            <li>
+            <li href="https://github.com/deboragoncalves/imersao-dev-alura/tree/main/project-calculator-day2">
                 <span class="project-image">📱</span>
                 <span class="project-title">Projeto 2 - Calculadora</span>
             </li>
-            <li>
+            <li href="https://github.com/deboragoncalves/imersao-dev-alura/tree/main/project-trying-number-day3">
                 <span class="project-image">🔮</span>
                 <span class="project-title">Projeto 3 - Mentalista</span>
             </li>
-            <li>
+            <li href="https://github.com/deboragoncalves/imersao-dev-alura/tree/main/project-volleybal-games-day4">
                 <span class="project-image">🏐</span>
                 <span class="project-title">Projeto 4 - Aluraflix</span>
             </li>
-            <li>
+            <li href="https://github.com/deboragoncalves/imersao-dev-alura/tree/main/project-favorite-games-day5">
                 <span class="project-image">🏅</span>
                 <span class="project-title">Projeto 5 - Tabela de classificação</span>
             </li>
-            <li>
+            <li href="https://github.com/deboragoncalves/imersao-dev-alura/tree/main/project-players-raffle-3-day9">
                 <span class="project-image">🏐</span>
                 <span class="project-title">Projeto 6 - Supertrunfo</span>
             </li>
-            <li>
+            <li href="https://github.com/deboragoncalves/imersao-dev-alura/tree/main/project-certificate-day10">
                 <span class="project-image">🏅</span>
                 <span class="project-title">Projeto 7 - Certificard</span>
             </li>
