--- a/project-players-raffle/index.html
+++ b/project-players-raffle/index.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 7 - Imersão Dev - Alura</title>
+    <title>Day 9 - Imersão Dev - Alura</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-super-trunfo.png" class="page-logo"
             alt="">
         <h1 class="page-title">Super Jogadora</h1>
-
         <button onclick="raffleCard()" id="buttonRaffle">Sortear jogadora</button>
-
         <form id="form">
             <h2>Escolha o seu atributo</h2>
-            <div class="options" id="options"></div>
-            <div class="playersNames"></div>
-            <div class="result"></div>
-            <button type="button" id="buttonPlay" onclick="play()" disabled="false">Jogar</button>
+            <div id="score"></div>
+            <div id="amount-cards"></div>
+            <div class="wrapper-player">
+                <div id="card-player" class="card">
+                    <div class="card-image-player"></div>
+                    <span class="card-title-player"></span>
+                    <div class="options-player"></div>
+                </div>
+            </div>
+            <div class="wrapper-machine">
+                <div id="card-machine" class="card">
+                    <div class="card-image-machine"></div>
+                    <span class="card-title-machine"></span>
+                    <div class="options-machine"></div>
+                </div>
+            </div>
+            <button class="button-play" type="button" id="buttonPlay" onclick="play()" disabled="false">Jogar</button>
+            <div id="results"></div>
+            <div id="resultFinal"></div>
+            <button type="button" id="buttonNextRound" onclick="nextRound()" disabled="true">Próxima
+                rodada</button>
         </form>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
